# monorepo-test

./: .gitignore  Cargo.toml  docker-compose.yml
apps/rust-server/: .gitignore  Cargo.toml
apps/rust-server/migrations/: 20251122120000_create_users.sql
apps/rust-server/src/: config.rs  main.rs
apps/rust-server/src/migrate/: mod.rs
apps/rust-server/src/routes/: echo.rs  health.rs  mod.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
docker/: rust.Dockerfile
